Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-28563

Default renderer does not sort opaque items

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.0.2
    • 5.0.0 RC 1
    • Quick: SceneGraph
    • None
    • b570d384c0704ea12364e353493eeb6f1ae34cd3 a81a24e01b1fe68e8ddce65a2d6187d6542cc6e0

    Description

      m_needs_sorting is never set to true, so sorting of opaque items never takes place. This also means setSortFrontToBackEnabled currently has no effect.

      Rectangle nodes also never set the Blending flag to true in the non-smooth case, which means they will not be recognized as opaque.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            sletta Gunnar Sletta
            mbrasser Michael Brasser
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes