Enable sorting of opaque items again in the default renderer.

This was disabled a long while back because we thought the code was
broken, and it turned out the problem was that our sort function
had a bug. b570d384c0704ea12364e353493eeb6f1ae34cd3 fixed the
actual problem, so now we reenable it.

Task-number: QTBUG-28563
Change-Id: I4032df82a1fd4cf7f775c8c64302c18239879fea
Reviewed-by: Michael Brasser <michael.brasser@live.com>